PR24125, Assertion failure with embedded NULs in string

An assertion that can be triggered by user input is wrong, so remove
it.  I believe the NUL would have been accepted before the PR20902
patch.

	PR 20902
	PR 24125
	* read.c (stringer): Delete assertion.